--- a/settings_local.py.tmpl
+++ b/settings_local.py.tmpl
@@ -1,5 +1,4 @@
 # -*- coding: utf8 -*-
-# This file is part of PyBossa.
 #
 # Copyright (C) 2013 SF Isle of Man Limited
 #
@@ -35,15 +34,15 @@ SQLALCHEMY_DATABASE_URI = 'postgresql://pybossa:tester@localhost/pybossa'
 ITSDANGEROUSKEY = 'its-dangerous-key'
 
 ## project configuration
-BRAND = 'PyBossa'
-TITLE = 'PyBossa'
-LOGO = 'default_logo.svg'
-COPYRIGHT = 'Set Your Institution'
-DESCRIPTION = 'Set the description in your config'
-TERMSOFUSE = 'http://okfn.org/terms-of-use/'
-DATAUSE = 'http://opendatacommons.org/licenses/by/'
-CONTACT_EMAIL = 'info@pybossa.com'
-CONTACT_TWITTER = 'PyBossa'
+BRAND = 'TinyBee'
+TITLE = 'TinyBee'
+LOGO = 'tinybee_logo.png'
+COPYRIGHT = 'TinyBee'
+DESCRIPTION = 'A tiny tiny tiny bee'
+TERMSOFUSE = ''
+DATAUSE =
+CONTACT_EMAIL = 'info@tinybee.ai'
+CONTACT_TWITTER = 'TinyBee'
 
 ## Default number of projects per page
 ## APPS_PER_PAGE = 20
@@ -89,7 +88,7 @@ MAIL_USERNAME = None
 MAIL_PASSWORD = None
 MAIL_PORT = 25
 MAIL_FAIL_SILENTLY = False
-MAIL_DEFAULT_SENDER = 'PyBossa Support <info@pybossa.com>'
+MAIL_DEFAULT_SENDER = 'TinyBee Support <info@tinybee.ai>'
 
 ## Announcement messages
 ## Use any combination of the next type of messages: root, user, and app owners
